# commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  pyproject.toml
tests/: test_commit_hooks.py
