[tool.poetry]
name = "commit-hooks"
version = "0.0.1"
description = "Some useful pre-commit hooks"
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]

[tool.poetry.dependencies]
python = "^3.7"
future = "^0.18.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
